--- a/ews-api/pom.xml
+++ b/ews-api/pom.xml
@@ -1,22 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>hoduflu</artifactId>
-		<groupId>com.itpearls.federation.hoduflu</groupId>
-		<version>3.0.2.1</version>
-	</parent>
-	<groupId>com.itpearls.federation.hoduflu</groupId>
-	<artifactId>exchange-service-client</artifactId>
+	<groupId>com.microsoft.ews</groupId>
+	<artifactId>ews-api</artifactId>
 	<packaging>jar</packaging>
-	<name>exchange-service-client</name>
-	<dependencies>
+	<version>1.0</version>
+	<name>ews-api</name>
 	
-		<dependency>
-			<groupId>com.itpearls.federation.hoduflu</groupId>
-			<artifactId>hoduflu-common</artifactId>
-		</dependency>
-		
+	<dependencies>
+			
 		<dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
@@ -42,12 +34,13 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<scope>provided</scope>
+			<version>1.6.0</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
