--- a/ews-ms-api/pom.xml
+++ b/ews-ms-api/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.microsoft.ews</groupId>
-	<artifactId>ews-api</artifactId>
+	<artifactId>ews-ms-api</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.4</version>
-
+	<name>ews-ms-api</name>
+	
 	<dependencies>
-
 		<dependency>
 			<groupId>com.microsoft.ews</groupId>
 			<artifactId>ews-helper</artifactId>
@@ -28,11 +28,7 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>javaee</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -47,10 +43,11 @@
 			<version>1.6.0</version>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>0.9.21</version>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
 		</dependency>
+		
 		
 		<dependency>
 			<groupId>junit</groupId>
